feat: 新增活动审核历史页面和提交人用户名显示 feat: 新增积分排行榜和个人积分记录页面 feat: 新增用户个人资料设置页面 feat: 新增管理员创建、更新、删除奖励功能 feat: 新增积分奖励商城页面 feat: 新增用户注册邮箱字段 feat: 新增活动撤销功能 feat: 新增管理员系统数据总览页面 refactor: 重构活动提交和审核逻辑 refactor: 重构用户积分增加逻辑 refactor: 移除不必要的依赖和文件 refactor: 修改异常处理逻辑 style: 更新登录和注册页面样式